# irsdk-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  irsdk++.code-workspace  package.json  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  release.yml
cmake/: dependencies.cmake  example_target.cmake  fs.cmake  hybrid_crt.cmake  system.cmake  targets.cmake
scripts/: bump-platform-version.mjs  create-release-draft-version.mjs  release-version.mjs
scripts/common/: git-helpers.mjs
